Se cambia la imagen de fondo en Login.

--- a/webMetics/Views/Usuario/IniciarSesion.cshtml
+++ b/webMetics/Views/Usuario/IniciarSesion.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Iniciar Sesión";
 }
 
-<body style="background-image: url('/images/fondo_login.jpg')">
+<body style="background-image: url('/images/fondo_login.svg')">
     <div class="d-flex justify-content-center align-items-center" style="height: 75vh;">
         <div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
             <div class="card shadow" style="width: 450px;">
