Cambios de estilo en el Footer y Lista de Grupos.

--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -59,7 +59,7 @@
                             visible = "0.5";
                         }
                         <div class="col mb-4">
-                            <div id="@grupo.idGrupo" class="card text-center" style="min-height:55vh; opacity:@visible">
+                            <div id="@grupo.idGrupo" class="card text-center" style="opacity:@visible">
                                 <div class="card-header">
                                     <div>
                                         <div style="float:left">
@@ -160,7 +160,7 @@
                             visible = "0.5";
                         }
                         <div class="col mb-4">
-                            <div id="@grupo.idGrupo" class="card text-center mb-1" style="min-height:55vh; opacity:@visible ">
+                            <div id="@grupo.idGrupo" class="card text-center mb-1" style="opacity:@visible ">
                                 <div class="card-header">
                                     <div>
                                         <div style="float:left">
