--- a/webMetics/Views/Shared/_Layout.cshtml
+++ b/webMetics/Views/Shared/_Layout.cshtml
@@ -129,10 +129,8 @@
                     </div>
                 </div>
             </section>
-            <hr class="mb-4" />
         </div>
-        <div class="text-center p-1"
-             style="background-color: rgba(0, 0, 0, 0.2)">
+        <div class="text-center p-1">
             <p>&copy; @DateTime.Now.Year METICS</p>
         </div>
     </footer>
