--- a/webMetics/Views/Grupo/EditarAdjunto.cshtml
+++ b/webMetics/Views/Grupo/EditarAdjunto.cshtml
@@ -1,7 +1,7 @@
 @model webMetics.Models.GrupoModel
 @using webMetics.Controllers
 @{
-    ViewBag.Title = "Archivo Adjunto";
+    ViewBag.Title = Model.nombre;
 
     var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
@@ -38,19 +38,32 @@
         @using (Html.BeginForm("EditarAdjunto", "Grupo", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
+            @Html.HiddenFor(grupoModel => grupoModel.idGrupo)
 
             <div class="form-horizontal">
                 <div class="row mb-3">
                     <div class="col">
                         <div class="container">
-                            <div>
-                                <h4>Adjuntar archivo del módulo:</h4>
-                                <div class="form-group">
-                                    @Html.TextBoxFor(grupoModel => grupoModel.archivoAdjunto, null, new { type = "file", @class = "form-control", name = "archivoAdjunto" })
-                                    @Html.ValidationMessageFor(grupoModel => grupoModel.archivoAdjunto, "", new { @class = "text-danger" })
+                            @if (ViewBag.Adjunto != null && ViewBag.Adjunto.Length > 0)
+                            {
+                                <div class="m-3">
+                                    <h5 class="mt-4">Archivo Actual</h5>
+                                    <div class="d-flex align-items-center">
+                                        @Html.ActionLink(" ", "DescargarArchivo", "Grupo", new { idGrupo = Model.idGrupo }, new { @class = "text-muted bi bi-download me-2" })
+                                        <span class="text-muted">@Model.nombreArchivo</span>
+                                    </div>
+                                    <iframe class="my-2 rounded" id="pdfPreview" src="data:application/pdf;base64,@(ViewBag.Adjunto)" width="100%" height="500" style="border: none;"></iframe>
+                                </div>
+                            }
+
+                            <div class="m-3 p-3 bg-light rounded">
+                                <h5>Adjuntar Archivo</h5>
+                                <small class="text-muted">Subir un archivo en formato <strong>PDF</strong> menor a 5 MB.</small>
+                                <div class="form-group mt-3">
+                                    <input type="file" asp-for="archivoAdjunto" class="form-control" />
+                                    <span asp-validation-for="archivoAdjunto" class="text-danger"></span>
                                 </div>
                             </div>
-                            @Html.HiddenFor(grupoModel => grupoModel.idGrupo)
                         </div>
                         <div class="row justify-content-center m-4">
                             <div class="col-auto">
@@ -70,3 +83,39 @@ else
 {
     await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
 }
+
+<script>
+    async function previewPDF(input) {
+        if (input.files && input.files[0]) {
+            const file = input.files[0];
+            const fileURL = URL.createObjectURL(file);
+
+            const loadingTask = pdfjsLib.getDocument(fileURL);
+            loadingTask.promise.then(pdf => {
+                // Fetch the first page
+                pdf.getPage(1).then(page => {
+                    const scale = 1.5;
+                    const viewport = page.getViewport({ scale: scale });
+
+                    // Prepare canvas using PDF page dimensions
+                    const canvas = document.getElementById('pdfCanvas');
+                    const context = canvas.getContext('2d');
+                    canvas.height = viewport.height;
+                    canvas.width = viewport.width;
+
+                    // Render PDF page into canvas context
+                    const renderContext = {
+                        canvasContext: context,
+                        viewport: viewport
+                    };
+                    page.render(renderContext);
+
+                    // Show the canvas
+                    canvas.style.display = 'block';
+                });
+            }).catch(error => {
+                console.error('Error loading PDF: ', error);
+            });
+        }
+    }
+</script>
