Se eliminan los tipos de actividad.

--- a/webMetics/Views/Categoria/EditarCategoria.cshtml
+++ b/webMetics/Views/Categoria/EditarCategoria.cshtml
@@ -6,6 +6,72 @@
     var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
 
+@if (ViewBag.Id != "" && ViewBag.Role == 1)
+{
+    <div class="contenedor-tipos-actividades container-fluid">
+        @if (urlReferrer != null)
+        {
+            <div class="d-flex justify-content-start mb-3">
+                <a class="text-dark fs-4" onclick="history.go(-1); return false;" href="#">
+                    <i class="bi bi-arrow-left"></i>
+                </a>
+            </div>
+        }
+
+        @using (Html.BeginForm("EditarCategoria", "Categoria", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+            @Html.AntiForgeryToken()
+            <h1>@ViewBag.Title</h1>
+            <hr />
+
+            if (ViewBag.ErrorMessage != null)
+            {
+                <div class="alert alert-dark alert-dismissible fade show mx-2" role="alert">
+                    <span>@ViewBag.ErrorMessage</span>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            }
+            if (ViewBag.SuccessMessage != null)
+            {
+                <div class="alert alert-success alert-dismissible fade show mx-2" role="alert">
+                    <span>@ViewBag.SuccessMessage</span>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            }
+
+            <div class="row mb-1">
+                <div class="col">
+                    <div class="container">
+                        <div class="form-group mt-1">
+                            @Html.LabelFor(temaModel => temaModel.nombre, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                            @Html.TextBoxFor(temaModel => temaModel.nombre, new { @class = "form-control", @maxlength = "64" })
+                            @Html.ValidationMessageFor(temaModel => temaModel.nombre, "", new { @class = "text-danger" })
+                        </div>
+
+                        <div class="form-group mt-1">
+                            @Html.LabelFor(temaModel => temaModel.descripcion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                            @Html.TextAreaFor(temaModel => temaModel.descripcion, new { @class = "form-control", @maxlength = "256" })
+                            @Html.ValidationMessageFor(temaModel => temaModel.descripcion, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="row justify-content-center m-4">
+                        <div class="col-auto">
+                            <a href="#" class="btn btn-secondary btn-block" onclick="history.go(-1); return false;">Cancelar</a>
+                        </div>
+                        <div class="col-auto">
+                            <input type="submit" class="btn btn-primary btn-block" value="Guardar" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+}
+else
+{
+    await Html.RenderPartialAsync("~/Views/Usuario/IniciarSesion.cshtml");
+}
+
 @if (urlReferrer != null)
 {
     <div class="d-flex justify-content-start mb-3">
@@ -47,6 +113,8 @@
             <div class="row">
                 <div class="col">
                     <div class="form-group">
+                        @Html.HiddenFor(categoriaModel => categoriaModel.idCategoria)
+
                         @Html.LabelFor(categoriaModel => categoriaModel.nombre, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
                         @Html.TextBoxFor(categoriaModel => categoriaModel.nombre, new { @class = "form-control", @maxlength = "64" })
                         @Html.ValidationMessageFor(categoriaModel => categoriaModel.nombre, "", new { @class = "text-danger" })
@@ -66,13 +134,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-
-        <div class="form-group" style="visibility:hidden">
-            <a style="color:red;font-size:22px">*</a> @Html.LabelFor(categoriaModel => categoriaModel.idGenerado, new { Style = "font-size:22px" })
-            @Html.TextBoxFor(categoriaModel => categoriaModel.idGenerado, new { @class = "form-control", @maxlength = "64" })
-            @Html.ValidationMessageFor(categoriaModel => categoriaModel.idGenerado, "", new { @class = "text-danger" })
         </div>
     }
 }
