--- a/webMetics/Views/Grupo/EditarGrupo.cshtml
+++ b/webMetics/Views/Grupo/EditarGrupo.cshtml
@@ -47,8 +47,6 @@
                             @Html.HiddenFor(grupoModel => grupoModel.cupoActual, new { })
                             @Html.HiddenFor(grupoModel => grupoModel.esVisible, new { })
 
-
-
                             @Html.LabelFor(grupoModel => grupoModel.nombre, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
                             @Html.TextBoxFor(grupoModel => grupoModel.nombre, new { @class = "form-control", @maxlength = "80", @autocomplete = "off" })
                             @Html.ValidationMessageFor(grupoModel => grupoModel.nombre, "", new { @class = "text-danger" })
@@ -88,15 +86,22 @@
                             @Html.TextBoxFor(grupoModel => grupoModel.horario, new { @placeholder = "Ejemplo: L - V de 7am a 9am", @class = "form-control", @maxlength = "200", @autocomplete = "off", @id = "horarioText" })
                             @Html.ValidationMessageFor(grupoModel => grupoModel.horario, "", new { @class = "text-danger" })
                         </div>
+
                         <div class="form-group mt-1">
-                            @Html.LabelFor(grupoModel => grupoModel.temaAsociado, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownListFor(grupoModel => grupoModel.temaAsociado, ViewData["Temas"] as List<SelectListItem>, "Seleccione un tema...", new { @class = "form-select" })
-                            @Html.ValidationMessageFor(grupoModel => grupoModel.temaAsociado, "", new { @class = "text-danger" })
+                            @Html.LabelFor(grupoModel => grupoModel.nombreTema, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                            @Html.DropDownListFor(grupoModel => grupoModel.idTema, ViewData["Temas"] as List<SelectListItem>, "Seleccione un tema...", new { @class = "form-select" })
+                            @Html.ValidationMessageFor(grupoModel => grupoModel.nombreTema, "", new { @class = "text-danger" })
+                        </div>
+
+                        <div class="form-group mt-1">
+                            @Html.LabelFor(grupoModel => grupoModel.nombreCategoria, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                            @Html.DropDownListFor(grupoModel => grupoModel.idCategoria, ViewData["Categorias"] as List<SelectListItem>, "Seleccione una categoría...", new { @class = "form-select" })
+                            @Html.ValidationMessageFor(grupoModel => grupoModel.nombreCategoria, "", new { @class = "text-danger" })
                         </div>
 
                         <div class="form-group mt-1">
                             @Html.LabelFor(grupoModel => grupoModel.nombreAsesorAsociado, new { Style = "font-size:22px" })
-                            @Html.DropDownListFor(grupoModel => grupoModel.nombreAsesorAsociado, ViewData["Asesores"] as List<SelectListItem>, "Seleccione una opción...", new { @class = "form-select", @id = "asesorSelect" })
+                            @Html.DropDownListFor(grupoModel => grupoModel.nombreAsesorAsociado, ViewData["Asesores"] as List<SelectListItem>, "Seleccione un asesor...", new { @class = "form-select", @id = "asesorSelect" })
                             @Html.ValidationMessageFor(grupoModel => grupoModel.nombreAsesorAsociado, "", new { @class = "text-danger" })
                         </div>
 
