Traslado de funciones a stored procedures.

--- a/webMetics/Views/Calificaciones/ExportarCalificaciones.cshtml
+++ b/webMetics/Views/Calificaciones/ExportarCalificaciones.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Calificaciones</h2>
 <h4> Grupo: @Model.nombreGrupo</h4>
-<h4> Asesor: @Model.nombreAsesorAsociado</h4>
+<h4> Asesor: @Model.nombreAsesor</h4>
 
 <table border='1' cellpadding='5' cellspacing='0' style='border: 1px solid #ccc;font-family: Arial; font-size: 10pt;'>
     <tr>
