--- a/webMetics/Views/Grupo/EditarGrupo.cshtml
+++ b/webMetics/Views/Grupo/EditarGrupo.cshtml
@@ -100,9 +100,9 @@
                         </div>
 
                         <div class="form-group mt-1">
-                            @Html.LabelFor(grupoModel => grupoModel.nombreAsesorAsociado, new { Style = "font-size:22px" })
-                            @Html.DropDownListFor(grupoModel => grupoModel.nombreAsesorAsociado, ViewData["Asesores"] as List<SelectListItem>, "Seleccione un asesor...", new { @class = "form-select", @id = "asesorSelect" })
-                            @Html.ValidationMessageFor(grupoModel => grupoModel.nombreAsesorAsociado, "", new { @class = "text-danger" })
+                            @Html.LabelFor(grupoModel => grupoModel.nombreAsesor, new { Style = "font-size:22px" })
+                            @Html.DropDownListFor(grupoModel => grupoModel.idAsesor, ViewData["Asesores"] as List<SelectListItem>, "Seleccione un asesor...", new { @class = "form-select", @id = "asesorSelect" })
+                            @Html.ValidationMessageFor(grupoModel => grupoModel.nombreAsesor, "", new { @class = "text-danger" })
                         </div>
 
                         <br />
