--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -78,9 +78,9 @@
                                         <div class="card-text mb-3">@grupo.descripcion</div>
                                     }
                                     <div class="card-text mb-3">Cantidad de horas: @grupo.cantidadHoras</div>
-                                    @if (!string.IsNullOrEmpty(grupo.nombreAsesorAsociado))
+                                    @if (!string.IsNullOrEmpty(grupo.nombreAsesor))
                                     {
-                                        <div class="card-text mb-3">Asesor: @grupo.nombreAsesorAsociado</div>
+                                        <div class="card-text mb-3">Asesor: @grupo.nombreAsesor</div>
                                     }
                                     else
                                     {
@@ -220,9 +220,9 @@
                                         <div class="card-text mb-3">@grupo.descripcion</div>
                                     }
                                     <div class="card-text mb-3">Cantidad de horas: @grupo.cantidadHoras</div>
-                                    @if (!string.IsNullOrEmpty(grupo.nombreAsesorAsociado))
+                                    @if (!string.IsNullOrEmpty(grupo.nombreAsesor))
                                     {
-                                        <div class="card-text mb-3">Asesor: @grupo.nombreAsesorAsociado</div>
+                                        <div class="card-text mb-3">Asesor: @grupo.nombreAsesor</div>
                                     }
                                     else
                                     {
