Se eliminan participantes desde el admin.

--- a/webMetics/Views/Tema/ListaTemas.cshtml
+++ b/webMetics/Views/Tema/ListaTemas.cshtml
@@ -89,11 +89,11 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Eliminar tema</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Eliminar área de competencia</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    ¿Está seguro de que desea eliminar este tema?
+                    ¿Está seguro de que desea eliminar esta área de competencia?
                     <br />
                     @using (Html.BeginForm("EliminarTema", "Tema"))
                     {
